# PasswordManager

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  crypto.rs  main.rs
manager/: Cargo.toml
manager/src/: client.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
