[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = { git = "https://github.com/RustCrypto/hashes", package = "sha2" }
aes-gcm = { git = "https://github.com/RustCrypto/AEADs", package = "aes-gcm" }
pbkdf2 = { git = "https://github.com/RustCrypto/password-hashes", package = "pbkdf2" }
hex-literal = "0.3"
rand = "0.8"     # Or the latest version compatible with your code
rand_core = "0.6"  # Or the latest version compatible with your code